@@ -1,0 +1,56 @@
+module Nestable
+  module Interface
+    
+    def ancestors
+    end
+    
+    def children
+    end
+    
+    def descendants
+    end
+    
+    def is_ancestor_of?(node)
+    end
+    
+    def is_descendant_of?(node)
+    end
+    
+    def is_sibling_of?(node)
+    end
+    
+    def is_root?
+    end
+    
+    def leaves
+    end
+    
+    def level
+    end
+    
+    def parent
+    end
+    
+    def root
+    end
+    
+    def roots
+    end
+    
+    def self_and_ancestors
+    end
+    
+    def self_and_children
+    end
+    
+    def self_and_descendants
+    end
+    
+    def self_and_siblings
+    end
+    
+    def siblings
+    end
+    
+  end
+end
